fix overflow errors

--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,6 @@
 .mapArea {
   position: absolute;
   width: 100%;
-  z-index: 0;
   margin: 0 auto;
 }
 .mapArea #simpleMap {
@@ -28,9 +27,6 @@
   margin: 2px 2px 0 2px;
   width: 25px;
 }
-.infoArea {
-  overflow: auto;
-}
 .infoArea dl {
   border: 3px double #ccc;
   padding: 0.5em;
@@ -55,6 +51,9 @@
 }
 .infoArea .activePOI {
   background-color: #f5eddd;
+}
+.newPOIWrapper {
+  overflow: visible;
 }
 .newPOIWrapper .newPOIHeadline {
   padding-left: 0.3em;
@@ -101,6 +100,7 @@
   padding: 0 0 0.5em 0;
 }
 .newPOIWrapper .newPOI .form-group .POIRules ul {
+  z-index: 10000!important;
   padding: 0.5em;
   margin: 0;
 }
@@ -188,6 +188,7 @@ html {
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
+  z-index: 0;
   height: 92%;
   padding-left: 0;
   padding-right: 0;
