--- a/less/infoArea.less
+++ b/less/infoArea.less
@@ -1,5 +1,4 @@
 .infoArea {
-  overflow: auto;
   dl {
     border: 3px double #ccc;
     padding: 0.5em;
