--- a/less/main.less
+++ b/less/main.less
@@ -50,6 +50,7 @@ body, html {
 
   .mapArea {
     .make-md-column(10);
+    z-index: 0;
     height: 92%;
     padding-left: 0;
     padding-right: 0;
