--- a/less/mapArea.less
+++ b/less/mapArea.less
@@ -1,7 +1,6 @@
 .mapArea {
   position: absolute;
   width: 100%;
-  z-index: 0;
   margin: 0 auto;
   #simpleMap {
     position: absolute;
