--- a/less/poiModal.less
+++ b/less/poiModal.less
@@ -1,4 +1,5 @@
 .newPOIWrapper {
+  overflow: visible;
   .newPOIHeadline {
     padding-left: 0.3em;
   }
@@ -50,6 +51,7 @@
       }
       .POIRules {
         ul {
+          z-index: 10000!important;
           padding: 0.5em;
           margin: 0;
           li {
